<resources>
    <string name="app_name">MCC Chat App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="melham_construction_corporation">Melham Construction Corporation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="active_status">Active Status</string>
    <string name="shows_that_you_re_active">Shows that you\'re Active</string>
    <string name="shows_that_you_re_busy">Shows that you\'re Busy</string>
    <string name="shows_that_you_re_away">Shows that you\'re Away</string>
    <string name="profile">Profile</string>
    <string name="arrow">Arrow</string>
    <string name="info">Info</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send_button">Send Button</string>
    <string name="send">Send</string>
    <string name="addfriend">AddFriend</string>
    <string name="change_details">Change Details</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="user_profile">User Profile</string>
    <string name="account_status">Account Status</string>
    <string name="send_report">Send Report</string>
    <string name="sign_out">Sign Out</string>
    <string name="feedback">Feedback</string>
    <string name="type_something_here">Type something here...</string>
    <string name="upload_image">upload_image</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_you_agree_in_mcc_s_terms_and_condition">Do you agree in MCC\'s terms and condition?</string>
    <string name="sign_up">sign up</string>
    <string name="user_info">User Info</string>
    <string name="email_icon">Email Icon</string>
    <string name="call_icon">Call Icon</string>
    <string name="call">Call</string>
    <string name="sms_icon">SMS Icon</string>
    <string name="sms">SMS</string>
    <string name="search">Search</string>
    <string name="new_email">New Email</string>
    <string name="email_change">Change Email?</string>
    <string name="enter_your_updated_email">Enter your updated Email</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="name_change">Change Name?</string>
    <string name="enter_your_updated_name">Enter your updated Name</string>
    <string name="new_name">New name</string>
    <string name="password_change">Change Password?</string>
    <string name="enter_your_old_password">Enter your Old Password</string>
    <string name="enter_your_new_password">Enter your New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_number">Change Phone Number?</string>
    <string name="enter_your_updated_phone_number">Enter your updated Phone Number</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="group_list">Group List</string>
    <string name="messages">Messages</string>
    <string name="user_list">User List</string>
</resources>