<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints,UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/change_email1"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_your_updated_email"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="08dp"
            android:background="@drawable/background_search"
            android:backgroundTint="@color/tint1"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="@dimen/_16ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextContrastCheck,TextFields"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/confirm_your_password"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="08dp"
            android:background="@drawable/background_search"
            android:backgroundTint="@color/tint1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/background_search"
                android:text="@string/close"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/background_search"
                android:text="@string/update"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle,TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>