<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/back"
                android:tint="@color/primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                android:paddingStart="8dp"
                android:text="@string/send_report"
                android:textColor="@color/primary_text"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/feedback"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputFeedback"
            android:layout_width="match_parent"
            android:layout_height="436dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_search"
            android:hint="@string/type_something_here"
            android:inputType="textMultiLine"
            android:padding="@dimen/_16ssp"
            android:gravity="start"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_search"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:text="@string/send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>