<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/agheswh"
    android:clipToPadding="false"
    android:overScrollMode="ifContentScrolls"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#88FFFFFF"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/mehlam_home_logo"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Welcome"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Melham Construction Corporation"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            tools:ignore="HardcodedText" />


        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_search"
            android:backgroundTint="@color/tint"
            android:ems="10"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textColor="@color/black"
            android:textColorHint="#455A64"
            android:textSize="@dimen/_13ssp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true">


            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_search"
                android:backgroundTint="@color/tint"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16ssp"
                android:paddingEnd="@dimen/_16ssp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_search"
            android:text="Sign in"
            android:textColor="#000000"
            android:textSize="@dimen/_13sdp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Forgot Password"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/don_t_have_an_account_sign_up_here"
            android:textAlignment="center"
            android:textColor="@color/primary_text" />

    </LinearLayout>
</ScrollView>